fix: widget-box would hide overflowing content
Fixes https://github.com/widgetti/solara/issues/790.
See also [this comment](https://github.com/widgetti/solara/issues/790#issuecomment-2355883912).

--- a/solara/server/assets/style.css
+++ b/solara/server/assets/style.css
@@ -143,6 +143,14 @@ div.highlight {
   display: none !important;
 }
 
+.widget-box, /* </DEPRECATED> */
+.jupyter-widget-box {
+  box-sizing: border-box;
+  display: flex;
+  margin: 0;
+  overflow: auto;
+}
+
 .lm-AccordionPanel[data-orientation='horizontal'] > .lm-AccordionPanel-title {
   /* Title is rotated for horizontal accordion panel using CSS */
   display: block;
